src/test/deca/context/valid/2_6.deca
class A{
    int a; 
    void f(A x){

    }
}
class B extends A{
    void g(){
        B b = new B();
        A a = new A();
        a.f(b);
    }
}