src/test/deca/context/invalid/3_66.deca
class C{
    int d;
}
class A{
    protected C a;
    int setc( C x){

    }
}
class B extends A{
    void f(){
        A z = new A();
        z.setc(z.a) ;        
    }
}